fix:bookin.html layout align center

--- a/static/booking.css
+++ b/static/booking.css
@@ -81,7 +81,7 @@ hr {
 
 .content {
   padding: 0 10px;
-  width: 100%;
+  width: 340px;
 }
 
 .welcome-text {
